--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
 
+:root {
+    --primary-magenta: hsl(300, 43%, 22%);
+    --primary-pink: hsl(333, 80%, 67%);
+    --secondary-magenta-dark: hsl(303, 10%, 53%);
+    --secondary-magenta-light:  hsl(300, 24%, 96%);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,8 +15,75 @@
 
 body {
     font-family: 'Spartan', sans-serif;
+    font-size: 15px;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    padding: 3rem;
+}
+
+/* TOP SECTION */
+.top-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.top-left {
+    width: 30%;
+}
+
+.top-left h1 {
+    color: var(--primary-magenta);
+    font-size: 2.5rem;
+}
+
+.top-left p {
+    color: var(--primary-pink);
+    margin-top: 1rem;
+}   
+
+.top-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.top-right .star {
+    display: flex;
+    padding: 1rem;
+    background-color: var(--secondary-magenta-light);
+    color: var(--primary-magenta);
+    border-radius: 0.5rem;
+} 
+
+.top-right .star-two {
+    transform: translateX(-3rem);
+}
+
+.top-right .star-one {
+    transform: translateX(-6rem);
+}
+
+.top-right .star .star-img {
+    margin: 0rem 0.5rem;
+}
+
+.top-right .star .star-text {
+    margin: 0rem 3.5rem 0rem 1rem;
+}
+
+
+/* BOTTOM SECTION */
+
+
+
+
+/* FOOTER */
 .attribution {
     font-size: 11px;
     text-align: center;
